// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flyout/FlyoutPresenter/FlyoutPresenter renders with all props 1`] = `
<div
  className="hig__flyout-v1 hig__flyout-v1--top-center hig__flyout-v1--hidden"
>
  <div
    className="hig__flyout-v1__action"
  >
    <button
      className="hig--light-theme hig__button-v1 hig__button-v1--size-standard hig__button-v1--type-primary hig__button-v1--width-shrink"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseOver={undefined}
    >
      <span
        className="hig__button__title"
      >
        Hello
      </span>
    </button>
  </div>
  <div
    className="hig__flyout-v1__container"
    style={
      Object {
        "left": "42px",
        "top": "42px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="hig__flyout-v1__pointer"
      role="presentation"
      style={
        Object {
          "left": "42px",
          "top": "42px",
        }
      }
    />
    <div
      aria-hidden="true"
      className="hig__flyout-v1__pointer-cover"
      role="presentation"
    />
  </div>
</div>
`;

exports[`flyout/FlyoutPresenter/FlyoutPresenter renders without props 1`] = `
<div
  className="hig__flyout-v1 hig__flyout-v1--exited hig__flyout-v1--top-left hig__flyout-v1--hidden"
>
  <div
    className="hig__flyout-v1__action"
  />
  <div
    className="hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="hig__flyout-v1__pointer"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    />
    <div
      aria-hidden="true"
      className="hig__flyout-v1__pointer-cover"
      role="presentation"
    />
  </div>
</div>
`;
